# Data-science

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.py  pyproject.toml
01_python_fundamentals/: README.md
01_python_fundamentals/01_basics/: basics_of_python.ipynb
01_python_fundamentals/01_python_core/: README.md
01_python_fundamentals/01_python_core/01_basics/: basics_of_python.ipynb
01_python_fundamentals/01_python_core/02_conditional_statements/: conditional_statements.ipynb
01_python_fundamentals/02_advanced_functions/: README.md
01_python_fundamentals/03_advanced_oop/: README.md
01_python_fundamentals/04_type_safety_and_pydantic/: README.md
01_python_fundamentals/05_concurrency_and_asyncio/: README.md
01_python_fundamentals/05_libraries/: dataclasses.ipynb  matplotlib.ipynb  numpy.ipynb  pandas.ipynb  regex.ipynb
01_python_fundamentals/06_fastapi_backend/: README.md
01_python_fundamentals/07_database_and_sqlalchemy/: README.md
01_python_fundamentals/08_testing_and_profiling/: README.md
03_machine_learning/: README.md
04_deep_learning/: README.md
04_deep_learning/01_pytorch_basics/: 01_tensor_basics.py
05_nlp/: README.md
06_llms_and_generative_ai/: README.md
07_mlops/: README.md
08_data_engineering/: README.md
08_data_engineering/06_web_scraping/: web_scraping.ipynb
Roadmap/: README.md
claude-certification/: .env.example  1day_study_plan.md  2day_study_plan.md  CCA-F-Study-Notes.md  README.md  RESOURCES.md  TODO.md  cca_f_full_documentation.md  claude_certification_guide.md  main.py  mcp_client.py  mcp_server.py
claude-certification/claude-code/: Claude Code Docs.md  GAME_PLAN.md  MCP.md  README.md  module-1-agentic-architecture-orchestration.md  module-2-claude-code-configuration-workflows.md  module-3-prompt-engineering-structured-output.md  module-4-tool-design-mcp.md  module-5-context-management-reliability.md  module-6-cross-module-topics.md
claude-certification/core/: chat.py  claude.py  cli.py  cli_chat.py  tools.py
projects/: README.md
utils/: __init__.py  helpers.py
